Some move restrictions and move notation

--- a/index.html
+++ b/index.html
@@ -26,8 +26,12 @@
       </ul>
     </div>
 
-    <div class="moves"></div>
+    <div class="moves" id="moves"></div>
 
+	<div class="nav">
+	  <button onclick="previousPosition()" class="navButton"> &lt;&lt; </button>
+	  <button onclick="nextPosition()" class="navButton"> &gt;&gt; </button>
+	</div>
   </div>
 
 </div>
