Put legal move logic in separate file

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <script type="text/javascript" src="initialize.js"></script>
 <script type="text/javascript" src="position.js"></script>
 <script type="text/javascript" src="gameplay.js"></script>
+<script type="text/javascript" src="legal.js"></script>
 
 </head>
 
