--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="main.css" type="text/css">
-<script type="text/javascript" src="alerts.js"></script>
+<script type="text/javascript" src="helpers.js"></script>
 <script type="text/javascript" src="initialize.js"></script>
 <script type="text/javascript" src="position.js"></script>
 <script type="text/javascript" src="gameplay.js"></script>
