Enabled undo move

--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
 		</div>
 
 		<div class="panelbox panelbottom center">
-			<button onclick="previousPosition()" class="navButton"> &lt;&lt; </button>
-			<button onclick="nextPosition()" class="navButton"> &gt;&gt; </button>
-			<p><button disabled class="navButton">Undo</button></p>
+			<button onclick="previousPosition();" class="navButton"> &lt;&lt; </button>
+			<button onclick="nextPosition();" class="navButton"> &gt;&gt; </button>
+			<p><button onclick="undoMove();" class="navButton">Undo</button></p>
 		</div>
 	</div>
 </div>
